--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,14 @@
 {
     "manifest_version": 3,
-    "name": "dark light them",
-    "description": "Enable dark light them",
+    "name": "currency converter ni7",
+    "description": "Enable currency converter ni7",
     "version": "1.0",
+    "icons": {
+        "16": "images/icon-16.png",
+        "32": "images/icon-32.png",
+        "48": "images/icon-48.png",
+        "128": "images/icon-128.png"
+    },
     "permissions": [
         "storage",
         "tabs",
@@ -14,6 +20,12 @@
         "https://*/*"
     ],
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "images/icon-16.png",
+            "32": "images/icon-32.png",
+            "48": "images/icon-48.png",
+            "128": "images/icon-128.png"
+        }
     }
 }
